Finish outputing to txt and fix some bugs
Enable to output to txt file. Html will hide the overflowed text in text-box and show them when hovered.

--- a/assets/default.css
+++ b/assets/default.css
@@ -23,6 +23,7 @@ body {
     background: cornsilk;
     border-radius: 8px;
     box-shadow: 0px 0px 10px #afafaf;
+    z-index: 1;
 }
 .highlight-image {
     box-shadow: 0px 0px 10px #989898;
